# MPU6500_lib

./: CMakeLists.txt  README.md
headers/: MPU6500.h  MPU6500.hpp  MPU6500_regmap.h
